--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "@fortawesome/fontawesome-free": "^6.6.0",
     "rxjs": "~7.8.0",
     "shallow-render": "^18.0.0",
     "tslib": "^2.3.0",
