--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,9 @@
     "paths": {
         "assets/*": [
             "public/assets/*"
+        ],
+        "shared/models/*": [
+            "src/app/shared/models/*"
         ]
     }
   },
