--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@emailjs/browser": "^4.4.1",
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@types/three": "^0.170.0",
+    "gsap": "^3.12.5",
     "rxjs": "~7.8.0",
     "shallow-render": "^18.0.0",
     "three": "^0.170.0",
