--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "e2e-test": "cucumber-js"
   },
   "private": true,
   "dependencies": {
@@ -33,8 +34,10 @@
     "@angular-devkit/build-angular": "^18.2.5",
     "@angular/cli": "^18.2.5",
     "@angular/compiler-cli": "^18.2.0",
+    "@cucumber/cucumber": "^11.1.1",
     "@types/jasmine": "~5.1.0",
     "autoprefixer": "^10.4.20",
+    "cypress": "^13.16.1",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
