--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,5 +38,9 @@
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
     "strictTemplates": true
-  }
+  },
+  "exclude": [
+    "./cypress.config.ts",
+    "cypress",
+  ]
 }
