feat: install angular-cli-ghpages

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@bahmutov/cypress-esbuild-preprocessor": "^2.2.4",
     "@cucumber/cucumber": "^11.1.1",
     "@types/jasmine": "~5.1.0",
+    "angular-cli-ghpages": "^2.0.3",
     "autoprefixer": "^10.4.20",
     "cypress": "^13.16.1",
     "esbuild": "^0.24.0",
