--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -101,8 +101,7 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": [],
-            "karmaConfig": "karma.conf.js"
+            "scripts": []
           }
         },
         "deploy": {
