--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
+    "test-ci": "ng test --karma-config karma.conf.ci.js",
     "e2e-test": "npx cypress open"
   },
   "private": true,
