--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,8 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "test-ci": "ng test --karma-config karma.conf.ci.js",
-    "e2e-test": "npx cypress open"
+    "e2e-test": "cypress open",
+    "e2e-test-ci": "cypress run --browser chrome --spec 'cypress/e2e/features/*'"
   },
   "private": true,
   "dependencies": {
