docs: add source as comment

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,3 +1,4 @@
+# Source: https://medium.com/@bidyutnayak10/running-angular-apps-with-nginx-in-docker-anywhere-a-simple-guide-3e951b22f86f
 server {
     listen 0.0.0.0:80;
     listen [::]:80;
