--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -13,6 +13,9 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: frontend
 
     strategy:
       matrix:
@@ -27,7 +30,6 @@ jobs:
         cache-dependency-path: frontend/package-lock.json
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: cd frontend
     - run: npm run install
     - run: npm run build --if-present
     - run: npm run lint
