--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -30,7 +30,7 @@ jobs:
         cache-dependency-path: frontend/package-lock.json
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm run install
+    - run: npm install
     - run: npm run build --if-present
     - run: npm run lint
     - run: npm run test-ci
