--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -34,6 +34,9 @@ jobs:
     - run: npm run build --if-present
     - run: npm run lint
     - run: npm run test-ci
-    - run: npm run start
-    - run: npm run e2e-test-ci
+    - run: | 
+        npm run start &
+        npm run e2e-test-ci
+      env:
+        API_URI: http://localhost:4200
 
