--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,7 +1,4 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-
-name: Node.js CI
+name: CI/CD-Workflow
 
 on:
   push:
@@ -10,8 +7,7 @@ on:
     branches: [ "master" ]
 
 jobs:
-  build:
-
+  ci-cd:
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -24,19 +20,32 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v4
       with:
         cache-dependency-path: frontend/package-lock.json
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm install
-    - run: npm run build --if-present
-    - run: npm run lint
-    - run: npm run test-ci
-    - run: | 
+
+    - name: Install dependencies
+      run: npm install
+
+    - name: Build
+      run: npm run build
+
+    - name: Run linter
+      run: npm run lint
+
+    - name: Run tests
+      run: npm run test-ci
+
+    - name: Run e2e tests
+      run: |
         npm run start &
         npm run e2e-test-ci
       env:
         API_URI: http://localhost:4200
 
+    - name: Deploy Angular app to GitHub Pages
+      run: ng deploy --base-href=/portfolio/ 
