fix: fix deployment

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -48,7 +48,6 @@ jobs:
         API_URI: http://localhost:4200
 
     - name: Deploy Angular app to GitHub Pages
-      run: | 
-        git config user.email "kun.manu93@gmail.com"
-        git config user.name "kunman93"
-        npm run ng deploy --base-href=/portfolio/
+      run: npm run ng deploy --base-href=/portfolio/
+      env:
+        GH_TOKEN: ${{ secrets.GH_TOKEN }}
