--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -31,23 +31,27 @@ jobs:
     - name: Install dependencies
       run: npm install
 
-    - name: Build
-      run: npm run build
+    # - name: Build
+    #   run: npm run build
 
-    - name: Run linter
-      run: npm run lint
+    # - name: Run linter
+    #   run: npm run lint
 
-    - name: Run tests
-      run: npm run test-ci
+    # - name: Run tests
+    #   run: npm run test-ci
 
-    - name: Run e2e tests
+    # - name: Run e2e tests
+    #   run: |
+    #     npm run start &
+    #     npm run e2e-test-ci
+    #   env:
+    #     API_URI: http://localhost:4200
+
+    - if: matrix.node-version == '20.x'
+      name: Deploy Angular app to GitHub Pages
       run: |
-        npm run start &
-        npm run e2e-test-ci
+        git config --global user.email kun.manu93@gmail.com
+        git config --global user.name kunman93
+        npm run ng deploy --base-href=/portfolio/
       env:
-        API_URI: http://localhost:4200
-
-    - name: Deploy Angular app to GitHub Pages
-      run: npm run ng deploy --base-href=/portfolio/
-      env:
-        GH_TOKEN: ${{ secrets.GH_TOKEN }}
+        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
