--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -7,8 +7,9 @@ on:
     branches: [ "master" ]
 
 jobs:
-  ci-cd:
+  ci:
     runs-on: ubuntu-latest
+
     defaults:
       run:
         working-directory: frontend
@@ -31,27 +32,51 @@ jobs:
     - name: Install dependencies
       run: npm install
 
-    # - name: Build
-    #   run: npm run build
+    - name: Build
+      run: npm run build
 
-    # - name: Run linter
-    #   run: npm run lint
+    - name: Run linter
+      run: npm run lint
 
-    # - name: Run tests
-    #   run: npm run test-ci
+    - name: Run tests
+      run: npm run test-ci
 
-    # - name: Run e2e tests
-    #   run: |
-    #     npm run start &
-    #     npm run e2e-test-ci
-    #   env:
-    #     API_URI: http://localhost:4200
+    - name: Run e2e tests
+      run: |
+        npm run start &
+        npm run e2e-test-ci
+      env:
+        API_URI: http://localhost:4200
+  cd: 
+    needs: ci
+
+    runs-on: ubuntu-latest
+
+    defaults:
+      run:
+        working-directory: frontend
+
+    strategy:
+      matrix:
+        node-version: [20.x]
+        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v4
+      with:
+        cache-dependency-path: frontend/package-lock.json
+        node-version: ${{ matrix.node-version }}
+        cache: 'npm'
+
+    - name: Install dependencies
+      run: npm install
 
     - if: matrix.node-version == '20.x'
       name: Deploy Angular app to GitHub Pages
-      run: |
-        git config --global user.email kun.manu93@gmail.com
-        git config --global user.name kunman93
-        npm run ng deploy --base-href=/portfolio/
+      # source for the config below: https://github.com/angular-schule/angular-cli-ghpages/blob/main/docs/README_environment_github_actions.md
       env:
-        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: npm run deploy-cd
